add turns to swagger docs
